SpeechRecognitionRemoteRealtimeMediaSourceManager should not issue sandbox extension for mocked devices https://bugs.webkit.org/show_bug.cgi?id=219972

Reviewed by Eric Carlson.

Source/WebCore:

* platform/mediastream/CaptureDevice.h:
(WebCore::CaptureDevice::isMockDevice const): Add a member in CaptureDevice to indicate if it's mocked device.
(WebCore::CaptureDevice::setIsMockDevice):
(WebCore::CaptureDevice::encode const):
(WebCore::CaptureDevice::decode):
* platform/mock/MockRealtimeMediaSourceCenter.cpp:
(WebCore::toCaptureDevice):

Source/WebKit:

* UIProcess/SpeechRecognitionPermissionManager.cpp:
(WebKit::SpeechRecognitionPermissionManager::startProcessingRequest): We need to sync the preference not only
on when mockCaptureDevicesEnabled is set, but also when it is unset.
* UIProcess/SpeechRecognitionRemoteRealtimeMediaSourceManager.cpp:
(WebKit::SpeechRecognitionRemoteRealtimeMediaSourceManager::addSource): Grant sandbox extensions to web process
when the first source that uses a real device is created.
(WebKit::SpeechRecognitionRemoteRealtimeMediaSourceManager::removeSource): Revoke sandbox extensions from web
process when the last source that uses a real device is delete.
* UIProcess/SpeechRecognitionRemoteRealtimeMediaSourceManager.h:
* UIProcess/SpeechRecognitionServer.cpp: Correct a typo.
(WebKit::SpeechRecognitionServer::SpeechRecognitionServer):
* UIProcess/SpeechRecognitionServer.h: Correct a typo


Canonical link: https://commits.webkit.org/232597@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270986 268f45cc-cd09-0410-ab3c-d52691b4dbfc